--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,9 +15,11 @@
         <label class="item item-input">
           <input type="password" placeholder="password" ng-model="user1.password">
         </label>
-      </div>
-      <div class="row">
-        <button type="submit" class="col button button-small button-assertive"> Login</button>
+        <div class="row">
+          <div class="col text-center">
+            <button type="submit" class="button button-outline button-assertive"> Login</button>
+          </div>
+        </div>
       </div>
     </form>
 
@@ -35,9 +37,11 @@
         <label class="item item-input">
           <input type="password" placeholder="password" ng-model="user2.password">
         </label>
-      </div>
-      <div class="row">
-        <button type="submit" class="col button button-small button-assertive">Create Account</button>
+        <div class="row">
+          <div class="col text-center">
+            <button type="submit" class="button button-outline button-assertive">Create Account</button>
+          </div>
+        </div>
       </div>
     </form>
 
